// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:flex 1`] = `
<div>
  <div
    class="cxd-Flex"
    data-role="container"
    style="display: flex; flex-direction: row; justify-content: center; align-items: stretch; align-content: center;"
  >
    <span
      class="cxd-TplField fr-view"
      style="background-color: rgb(26, 92, 255); width: 100px; height: 50px; margin: 5px;"
    >
      <span>
        <span
          class="text-muted"
        />
      </span>
    </span>
    <span
      class="cxd-TplField fr-view"
      style="background-color: rgb(70, 201, 58); width: 100px; height: 50px; margin: 5px;"
    >
      <span>
        <span
          class="text-muted"
        />
      </span>
    </span>
    <span
      class="cxd-TplField fr-view"
      style="background-color: rgb(255, 71, 87); width: 100px; height: 50px; margin: 5px;"
    >
      <span>
        <span
          class="text-muted"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Renderer:flex justify 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              center
            </span>
          </span>
          <div
            class="cxd-Flex"
            data-role="container"
            style="display: flex; flex-direction: row; justify-content: center; align-items: stretch; align-content: center;"
          >
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(26, 92, 255); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(70, 201, 58); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(255, 71, 87); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
          </div>
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              flex-start
            </span>
          </span>
          <div
            class="cxd-Flex"
            data-role="container"
            style="display: flex; flex-direction: row; justify-content: flex-start; align-items: stretch; align-content: center;"
          >
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(26, 92, 255); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(70, 201, 58); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(255, 71, 87); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
          </div>
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              flex-end
            </span>
          </span>
          <div
            class="cxd-Flex"
            data-role="container"
            style="display: flex; flex-direction: row; justify-content: flex-end; align-items: stretch; align-content: center;"
          >
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(26, 92, 255); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(70, 201, 58); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(255, 71, 87); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
          </div>
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              space-around
            </span>
          </span>
          <div
            class="cxd-Flex"
            data-role="container"
            style="display: flex; flex-direction: row; justify-content: space-around; align-items: stretch; align-content: center;"
          >
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(26, 92, 255); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(70, 201, 58); margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(255, 71, 87); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
          </div>
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              space-between
            </span>
          </span>
          <div
            class="cxd-Flex"
            data-role="container"
            style="display: flex; flex-direction: row; justify-content: space-between; align-items: stretch; align-content: center;"
          >
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(26, 92, 255); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(70, 201, 58); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(255, 71, 87); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
          </div>
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              space-evenly
            </span>
          </span>
          <div
            class="cxd-Flex"
            data-role="container"
            style="display: flex; flex-direction: row; justify-content: space-evenly; align-items: stretch; align-content: center;"
          >
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(26, 92, 255); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(70, 201, 58); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
            <span
              class="cxd-TplField fr-view"
              style="background-color: rgb(255, 71, 87); width: 100px; height: 30px; margin: 5px;"
            >
              <span>
                <span
                  class="text-muted"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
